# realmate-liniker-challenge

./: Dockerfile  INSTRUCTION.md  INSTRUCTIONS.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements.txt
backend/: .env.example  Dockerfile  entrypoint.sh  pyproject.toml  pytest.ini  requirements.in  requirements.txt
backend/chat/: models.py  serializers.py  tasks.py  urls.py  views.py
backend/chat/migrations/: 0002_alter_message_type.py  0003_message_processed.py  0004_alter_message_processed.py
backend/chat/tests/: conftest.py  test_models.py  test_tasks.py  test_views.py
backend/realmate_challenge/: celery.py  settings.py  urls.py
chat/: models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
chat/migrations/: 0001_initial.py
excalidraw/: image-challenged.excalidraw
frontend/: Dockerfile  package.json
frontend/src/: App.vue
frontend/src/assets/: base.css
frontend/src/components/: Chat.vue
frontend/src/components/chat/: ChatArea.vue  ChatInput.vue  ConversationList.vue  MessageList.vue
frontend/src/services/: chatService.js
realmate_challenge/: celery.py  settings.py  urls.py
